single mask handling

--- a/deep-dream-standard.ipynb
+++ b/deep-dream-standard.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -59,15 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# start with a gray image with a little noise\n",
-    "img_noise = np.random.uniform(size=(224,224,3)) + 100.0\n",
-    "\n",
     "def showarray(a, fmt='jpeg'):\n",
     "    a = np.uint8(np.clip(a, 0, 1)*255)\n",
     "    # create an empty (?) file object\n",
@@ -124,15 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# default start with a gray image with a little noise\n",
-    "img_noise = np.random.uniform(size=(224,224,3)) + 100.0\n",
-    "\n",
     "def render_deepdream(t_obj, img0=img_noise, disp=True,\n",
     "                     iter_n=10, step=1.5, octave_n=4, octave_scale=1.4):\n",
     "    t_score = tf.reduce_mean(t_obj) # defining the optimization objective\n",
@@ -178,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -187,72 +181,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Layer 1 OF 18\n",
-      "Feature 024 of 024\n",
-      "\n",
-      "Layer 2 OF 18\n",
-      "Feature 064 of 064\n",
-      "\n",
-      "Layer 3 OF 18\n",
-      "Feature 128 of 128\n",
-      "\n",
-      "Layer 4 OF 18\n",
-      "Feature 024 of 024\n",
-      "\n",
-      "Layer 5 OF 18\n",
-      "Feature 064 of 064\n",
-      "\n",
-      "Layer 6 OF 18\n",
-      "Feature 144 of 144\n",
-      "\n",
-      "Layer 7 OF 18\n",
-      "Feature 032 of 032\n",
-      "\n",
-      "Layer 8 OF 18\n",
-      "Feature 064 of 064\n",
-      "\n",
-      "Layer 9 OF 18\n",
-      "Feature 160 of 160\n",
-      "\n",
-      "Layer 10 OF 18\n",
-      "Feature 032 of 032\n",
-      "\n",
-      "Layer 11 OF 18\n",
-      "Feature 128 of 128\n",
-      "\n",
-      "Layer 12 OF 18\n",
-      "Feature 160 of 160\n",
-      "\n",
-      "Layer 13 OF 18\n",
-      "Feature 048 of 048\n",
-      "\n",
-      "Layer 14 OF 18\n",
-      "Feature 128 of 128\n",
-      "\n",
-      "Layer 15 OF 18\n",
-      "Feature 192 of 192\n",
-      "\n",
-      "Layer 16 OF 18\n",
-      "Feature 048 of 048\n",
-      "\n",
-      "Layer 17 OF 18\n",
-      "Feature 128 of 128\n",
-      "\n",
-      "Layer 18 OF 18\n",
-      "Feature 128 of 128\n",
-      "\n",
-      "Total Elapsed Time: 14 hours\n"
+      "Layer 1 OF 29\n",
+      "Feature 005 of 192"
      ]
     }
    ],
    "source": [
     "# import image\n",
-    "img0 = PIL.Image.open('/home/mattw/Dropbox/deep-dream/trees/osa_island.jpg')\n",
+    "img0 = PIL.Image.open('/home/mattw/Dropbox/deep-dream/clouds/mountain_clouds.JPG')\n",
     "img0 = np.float32(img0)\n",
     "# showarray(img0/255.0)\n",
     "\n",
     "# for exporting\n",
-    "dir_path = '/home/mattw/results/deep-dream/trees/osa_island'\n",
+    "dir_path = '/home/mattw/results/deep-dream/clouds/mountain_clouds'\n",
     "\n",
     "# get network info\n",
     "layers = [op.name for op in graph.get_operations() if op.type=='Conv2D' and 'import/' in op.name]\n",
@@ -260,7 +201,7 @@
     "\n",
     "# loop over selected layers\n",
     "# layer_nums = [1]\n",
-    "layer_nums = range(24, len(layers), 2)\n",
+    "layer_nums = range(2, len(layers), 2)\n",
     "layer_counter = 0\n",
     "start = time.time()\n",
     "for layer_num in layer_nums:\n",
@@ -539,7 +480,7 @@
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
