movie import infrastructure

--- a/deep-dream-movie.ipynb
+++ b/deep-dream-movie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import time\n",
     "import PIL.Image\n",
-    "import imagio\n",
+    "import imageio\n",
     "from IPython.display import clear_output, Image, display\n",
     "from __future__ import print_function\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -187,25 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/numpy/core/numeric.py:190: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
-      "  a = empty(shape, dtype, order)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Frame 008 of 168"
+      "Downsampling frames\n",
+      "Frame 753 of 753\n",
+      "\n",
+      "Done!\n"
      ]
     }
    ],
@@ -215,61 +210,93 @@
     "features = [int(graph.get_tensor_by_name(name+':0').get_shape()[-1]) for name in layers]\n",
     "\n",
     "# import movie data\n",
-    "video = imageio.get_reader('/media/data/Dropbox/deep-dream/source/videos/test_0' ,'ffmpeg')\n",
+    "# video = imageio.get_reader('/media/data/Dropbox/image-play/source/videos/test_0.mp4' ,'ffmpeg')\n",
+    "video = imageio.mimread('/media/data/Dropbox/image-play/source/videos/test_1.mp4', memtest=False)\n",
     "\n",
     "# user variables\n",
     "saving = 1                 # 1 to save\n",
-    "layer_nums = [10, 10] \n",
-    "feature_nums = [0, 121]\n",
-    "num_frames = 150           # number of frames for transition from one filter to the next\n",
-    "num_frames_cutoff = 50     # get rid of a certain number of beginning frames (more variation here)\n",
+    "layer_nums = [10] \n",
+    "feature_nums = [0]\n",
+    "num_frames_cutoff = 0\n",
+    "num_skips = 1\n",
+    "downsample_fac = 2\n",
     "\n",
-    "T_layers = []\n",
-    "for layer_num in layer_nums:\n",
-    "    T_layers.append(layers[layer_num])\n",
-    "    \n",
-    "weights = []\n",
-    "temp = np.linspace(0.0, 1.0, num=num_frames)\n",
-    "temp = np.append(temp, np.ones(np.floor(num_frames/8)))\n",
-    "weights.append(temp)\n",
-    "temp = 1.0 - temp\n",
-    "weights.append(temp)\n",
+    "# first iteration base frame\n",
+    "img_base = video[0]\n",
+    "hw = img_base.shape[:2]\n",
+    "hw = np.int32(np.floor(np.float32(hw)/downsample_fac))\n",
     "\n",
-    "for i, img0 in enumerate(vid):\n",
+    "# downsample frames\n",
+    "print('Downsampling frames')\n",
+    "for i, img0 in enumerate(video):\n",
+    "    video[i] = resize(video[i], hw)\n",
     "    \n",
-    "    print(\"\\rFrame %03i of %03i\" % (i+1, weights[0].size), end=\"\")\n",
-    "    \n",
-    "    # for consistency between frames\n",
-    "    np.random.seed(0)\n",
-    "    \n",
-    "    # run deep dream\n",
-    "    img = render_deepdream(weights[0][i]*T(T_layers[0])[:,:,:,feature_nums[0]] + \\\n",
-    "                           weights[1][i]*T(T_layers[1])[:,:,:,feature_nums[1]], \\\n",
-    "                           img0, iter_n=40, octave_n=4, disp=False, octave_scale=1.4) # 20, 4, 1.4\n",
-    "    \n",
-    "    base_multiplier = 0.5\n",
-    "    # 0.1 - large increase in color saturation, good stability of features\n",
-    "    # 0.5 - decent tradeoff between saturation and stability\n",
-    "    # 0.9 - color saturation stays nice, stability of features pretty bad\n",
+    "img_base = video[0]\n",
     "\n",
-    "    # use a convex combination of base image and previous output to maintain feature continuity\n",
-    "    img0 = (1-base_multiplier)*img + base_multiplier*img_base\n",
+    "# store processed images\n",
+    "dir_path = '/home/mattw/Desktop/test_movie'  \n",
+    "file_name = 'dd_vid_test1.mp4'\n",
+    "file_path = '/'.join([dir_path, file_name])\n",
+    "writer = imageio.get_writer(file_path, fps=30)\n",
+    "\n",
+    "for i, img0 in enumerate(video):\n",
     "    \n",
-    "    # save output\n",
-    "    if saving & (i >= num_frames_cutoff) & (i % 2 == 0):\n",
-    "        dir_path = '/home/mattw/Desktop/test_sierra'  \n",
-    "        feature_name = 'frame_l%03i.jpg' % i\n",
-    "        file_path = '/'.join([dir_path, feature_name])\n",
-    "        img = np.uint8(np.clip(img, 0, 255)) \n",
-    "        PIL.Image.fromarray(img).save(file_path, 'jpeg')\n",
-    "        \n",
+    "    print('\\rFrame %03i of %03i' % (i+1, len(video)), end=\"\")\n",
+    "\n",
+    "    if i < 90:\n",
+    "        base_multiplier = 0.2\n",
+    "        # 0.1 - large increase in color saturation, good stability of features\n",
+    "        # 0.5 - decent tradeoff between saturation and stability\n",
+    "        # 0.9 - color saturation stays nice, stability of features pretty bad\n",
+    "\n",
+    "        # use a convex combination of base image and previous output to maintain feature continuity\n",
+    "        img0 = (1-base_multiplier)*img0 + base_multiplier*img_base\n",
+    "\n",
+    "        # for consistency between frames\n",
+    "        np.random.seed(0)\n",
+    "\n",
+    "        # run deep dream\n",
+    "        img = render_deepdream(T(layers[layer_nums[0]])[:,:,:,feature_nums[0]], \\\n",
+    "                               img0, iter_n=10, octave_n=2, disp=False, octave_scale=1.4) # 20, 4, 1.4\n",
+    "        img_base = img\n",
+    "    #     imgs0.append(img)\n",
+    "    #     imgs1.append(np.uint8(np.clip(img, 0, 255)))\n",
+    "\n",
+    "#         if saving:\n",
+    "#             dir_path = '/home/mattw/Desktop/test_movie'  \n",
+    "#             file_name = 'dd_vid_test1_%03i.jpg' % i\n",
+    "#             file_path = '/'.join([dir_path, file_name])\n",
+    "#             img = np.uint8(np.clip(img, 0, 255))\n",
+    "#             PIL.Image.fromarray(img).save(file_path, 'jpeg')\n",
+    "        if saving:\n",
+    "            img = np.uint8(np.clip(img, 0, 255))\n",
+    "            writer.append_data(img)\n",
+    "\n",
+    "writer.close()\n",
     "print('\\n\\nDone!')\n",
     "\n",
-    "# to make a gif:\n",
-    "# cd to the directory containing the images\n",
-    "#   mogrify -despeckle *.jpg\n",
-    "#   convert -delay 5x120 -loop 0 *.jpg animated.gif\n",
-    "#   convert animated.gif -coalesce -duplicate 1,-2-1 -quiet -layers OptimizePlus -loop 0 cycle.gif"
+    "# to make an mp4\n",
+    "# if saving:\n",
+    "#     dir_path = '/home/mattw/Desktop/test_sierra'  \n",
+    "#     file_name = 'dd_vid_test0.jpg'\n",
+    "#     file_path = '/'.join([dir_path, feature_name])\n",
+    "# #     img = np.uint8(np.clip(img, 0, 255))\n",
+    "#     imageio.mimwrite(file_name, imgs[num_frames_cufoff:num_skips:])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dir_path = '/home/mattw/Desktop'  \n",
+    "file_name = 'dd_vid_test0.mp4'\n",
+    "file_path = '/'.join([dir_path, file_name])\n",
+    "imageio.mimwrite(file_name, imgs0, format='mp4', fps=30)"
    ]
   },
   {
@@ -302,41 +329,9 @@
     "layer = layers[10]\n",
     "feature_num = 0\n",
     "# tubes_00 - 10/10, 20/9, 26/22, 28/27, 22/101, 14/55, *20/37*\n",
-    "# tubes_01 - 14/38, 22/11, 22/62, *10/0*, 10/65\n",
+    "# tubes_01 - 14/38, 22/11, 22/62, *10/0*, *10/65*\n",
     "# run deep dream; more iterations intensifies features, more octaves increases their size\n",
     "img = render_deepdream(T(layer)[:,:,:,feature_num], img0, iter_n=40, octave_n=4, octave_scale=1.4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ImageMagick Commands"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### to downsample a single image:\n",
-    "convert {source} -resize X% {output}\n",
-    "\n",
-    "### to batch downsample an entire directory:\n",
-    "mogrify -path full/path/to/temp -resize 60x60% -quality 60 -format jpg *.png\n",
-    "take all pngs in current directory, resize them by 60%, set quality to 60, format to jpg, and output to full/path/to/temp\n",
-    "\n",
-    "### to batch denoise an entire directory\n",
-    "mogrify -despeckle *.jpg\n",
-    "### for a single image\n",
-    "convert -despeckle image.jpg new_image.jpg\n",
-    "\n",
-    "### create gif:\n",
-    "convert -delay 4x120 -loop 0 *.jpg animated.gif\n",
-    "take all jpgs in current directory and turn them into a gif that loops indefinitely, with a framerate of 120/4 = 30 fps\n",
-    "\n",
-    "### set up patrol cycle\n",
-    "convert animated.gif -coalesce -duplicate 1,-2-1 -quiet -layers OptimizePlus -loop 0 cycle.gif\n",
-    "no idea what's really going on here. Takes \"animated.gif\" and duplicates all frames once except first and last (that's somehow encoded in 1,-2-1), loops the result indefintely, and outputs to cycle.gif"
    ]
   }
  ],
