neural style updates for gif output

--- a/neural-style-standard.ipynb
+++ b/neural-style-standard.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "CONTENT_LAYER = 'conv4_2'\n",
-    "STYLE_LAYERS = ('conv1_1', 'conv2_1', 'conv3_1', 'conv4_1', 'conv5_1')\n",
+    "STYLE_LAYERS = ('conv1_1', 'conv2_1', 'conv3_1', 'conv4_1')\n",
     "\n",
     "def stylize(network, initial, content, styles, iterations,\n",
     "        content_weight, style_weight, style_blend_weights, tv_weight,\n",
@@ -223,7 +223,7 @@
     "        train_step = tf.train.AdamOptimizer(learning_rate).minimize(loss)\n",
     "\n",
     "        def print_progress(i, last=False):\n",
-    "            print('\\rIteration %d/%d' % (i + 1, iterations))\n",
+    "            print('\\rIteration %d/%d' % (i + 1, iterations), end='')\n",
     "            if print_iterations and i % print_iterations == 0:\n",
     "                print('  content loss: %g\\n' % content_loss.eval())\n",
     "                print('    style loss: %g\\n' % style_loss.eval())\n",
@@ -241,14 +241,15 @@
     "                train_step.run()\n",
     "\n",
     "                if (checkpoint_iterations and i % checkpoint_iterations == 0) or last_step:\n",
-    "                    this_loss = loss.eval()\n",
-    "                    if this_loss < best_loss:\n",
-    "                        best_loss = this_loss\n",
-    "                        best = image.eval()\n",
+    "#                     this_loss = loss.eval()\n",
+    "#                     if this_loss < best_loss:\n",
+    "#                         best_loss = this_loss\n",
+    "#                         best = image.eval()\n",
     "                    yield (\n",
-    "                        (None if last_step else i),\n",
-    "                        unprocess(best.reshape(shape[1:]), mean_pixel)\n",
+    "                        (i if last_step else i),\n",
+    "                        unprocess(image.eval().reshape(shape[1:]), mean_pixel)\n",
     "                    )\n",
+    "    print('\\n')\n",
     "\n",
     "def _tensor_size(tensor):\n",
     "    from operator import mul\n",
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -320,48 +321,37 @@
      "output_type": "stream",
      "text": [
       "Computing forward pass for content features...Done!\n",
-      "Computing forward pass for style features...Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iteration 1000/1000"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total time elapsed: 1148 seconds\n"
+      "Computing forward pass for style features...Done!\n",
+      "Iteration 300/300\n",
+      "\n",
+      "Total time elapsed: 227 seconds\n"
      ]
     }
    ],
    "source": [
     "# default arguments\n",
-    "CONTENT_WEIGHT = 5e0\n",
-    "STYLE_WEIGHT = 1e0 #1e2\n",
-    "TV_WEIGHT = 1e2\n",
-    "LEARNING_RATE = 1e1\n",
-    "STYLE_SCALE = 1.0\n",
-    "ITERATIONS = 1000\n",
+    "CONTENT_WEIGHT = 5e0 #5e0\n",
+    "STYLE_WEIGHT = 1e2 #1e2\n",
+    "TV_WEIGHT = 1e2 #1e2\n",
+    "LEARNING_RATE = 2e0 #1e1\n",
+    "STYLE_SCALE = 1.0 #1.0\n",
+    "ITERATIONS = 300 #100\n",
     "\n",
     "saving = 1\n",
     "NETWORK_LOC = '/media/data/Dropbox/Git/tf-deepdream/imagenet-vgg-verydeep-19.mat'\n",
-    "# CONTENT_LOC = '/media/data/Dropbox/image-play/source/snow/sierra_in_snow.jpg'\n",
-    "CONTENT_LOC = '/media/data/Dropbox/image-play/source/buildings/hong_kong_0.jpg'\n",
-    "STYLE_LOC = '/media/data/Dropbox/image-play/source/art/starry_night.jpg'\n",
-    "OUTPUT_LOC = '/media/data/Dropbox/image-play/ns-single_image/hong_kong_skyline'\n",
+    "# CONTENT_LOC = '/media/data/Dropbox/image-play/source/edges/crater_lake_edge.jpg'\n",
+    "CONTENT_LOC = '/home/mattw/Desktop/test_movie5/hong_kong_s100_c5_119.jpg'\n",
+    "STYLE_LOC = '/media/data/Dropbox/image-play/source/art/lavender_field_negated.jpg'\n",
+    "OUTPUT_LOC = '/home/mattw/Desktop/test_movie5'\n",
     "\n",
     "PRINT_ITERATIONS = None\n",
-    "CHECKPOINT_ITERATIONS = None\n",
+    "CHECKPOINT_ITERATIONS = 1\n",
     "\n",
     "# import images\n",
     "content_image = np.float32(PIL.Image.open(CONTENT_LOC))\n",
     "style_image = np.float32(PIL.Image.open(STYLE_LOC))\n",
     "target_shape = content_image.shape\n",
-    "img0 = np.random.randn(*target_shape)\n",
+    "img0 = content_image + 5*np.random.randn(*target_shape)\n",
     "\n",
     "start = time.time()\n",
     "for iteration, image in stylize(\n",
@@ -378,14 +368,69 @@
     "    print_iterations=PRINT_ITERATIONS,\n",
     "    checkpoint_iterations=CHECKPOINT_ITERATIONS\n",
     "):\n",
-    "    if (iteration is None) and saving:\n",
-    "        file_name = 'hong_kong_1000_s1_c5_starrynight.jpg'\n",
+    "    if saving:\n",
+    "        file_name = 'hong_kong_s%i_c%i_%03i.jpg' % (STYLE_WEIGHT, CONTENT_WEIGHT, iteration+200)\n",
     "        file_path = '/'.join([OUTPUT_LOC, file_name])\n",
     "        image = np.uint8(np.clip(image, 0, 255))\n",
     "        PIL.Image.fromarray(image).save(file_path, 'jpeg')\n",
     "end = time.time()\n",
     "\n",
     "print('Total time elapsed: %d seconds' % (end-start))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ImageMagick Commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### to downsample a single image:\n",
+    "convert {source} -resize X% {output}\n",
+    "\n",
+    "### to batch downsample an entire directory:\n",
+    "mogrify -path full/path/to/temp -resize 60x60% -quality 60 -format jpg *.png\n",
+    "take all pngs in current directory, resize them by 60%, set quality to 60, format to jpg, and output to full/path/to/temp\n",
+    "\n",
+    "### to batch denoise an entire directory\n",
+    "mogrify -despeckle *.jpg\n",
+    "### for a single image\n",
+    "convert -despeckle image.jpg new_image.jpg\n",
+    "\n",
+    "### create gif:\n",
+    "convert -delay 4x120 -loop 0 *.jpg animated.gif\n",
+    "take all jpgs in current directory and turn them into a gif that loops indefinitely, with a framerate of 120/4 = 30 fps\n",
+    "\n",
+    "### set up patrol cycle\n",
+    "convert animated.gif -coalesce -duplicate 1,-2-1 -quiet -layers OptimizePlus -loop 0 cycle.gif\n",
+    "no idea what's really going on here. Takes \"animated.gif\" and duplicates all frames once except first and last (that's somehow encoded in 1,-2-1), loops the result indefintely, and outputs to cycle.gif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# first pass - crater_lake_edge/lavender_field\n",
+    "CONTENT_WEIGHT = 5\n",
+    "STYLE_WEIGHT = 100\n",
+    "TV_WEIGHT = 100\n",
+    "LEARNING_RATE = 2 # larger learning rates introduce more noise\n",
+    "ITERATIONS = 0:1:10 - 12:2:120\n",
+    "\n",
+    "# second pass - crater_lake_edge_processed/lavender_field_negated\n",
+    "CONTENT_WEIGHT = 5\n",
+    "STYLE_WEIGHT = 100\n",
+    "TV_WEIGHT = 100\n",
+    "LEARNING_RATE = 2 # larger learning rates introduce more jitter in transition\n",
+    "ITERATIONS = 0:1:10 - 15:5:300"
    ]
   }
  ],
